tests/auto/qml/qmllint/data/duplicateId.qml
@@ -1,0 +1,8 @@
+import QtQuick
+
+Item {
+    id: root
+    Item {
+        id: root
+    }
+}
